[gd_scene load_steps=11 format=2]

[ext_resource path="res://player/camera_smooth_physics.gd" type="Script" id=1]
[ext_resource path="res://player/player.gd" type="Script" id=2]
[ext_resource path="res://player/player_gui.tscn" type="PackedScene" id=3]
[ext_resource path="res://world_item/guns/pm9.tscn" type="PackedScene" id=4]
[ext_resource path="res://world_item/guns/rf7.tscn" type="PackedScene" id=5]
[ext_resource path="res://world_item/guns/kf1.tscn" type="PackedScene" id=6]
[ext_resource path="res://interfaces/i_health.gd" type="Script" id=7]

[sub_resource type="CylinderShape" id=1]
radius = 2.2
height = 5.0

[sub_resource type="CylinderShape" id=9]
height = 5.0

[sub_resource type="CapsuleMesh" id=8]
mid_height = 3.0

[node name="Player" type="KinematicBody" groups=["SPAWN_TYPE_GROUP__UNIVERSAL"]]
collision_layer = 6
script = ExtResource( 2 )
auto_bhop = false

[node name="IHealth" type="Node" parent="."]
script = ExtResource( 7 )
max_armor = 100.0

[node name="Area" type="Area" parent="."]
collision_layer = 0
collision_mask = 8
monitorable = false

[node name="CollisionShape" type="CollisionShape" parent="Area"]
shape = SubResource( 1 )

[node name="Body" type="CollisionShape" parent="."]
transform = Transform( 1, 0, 0, 0, 1, -1.06581e-14, 0, 1.06581e-14, 1, 0, 0, 0 )
shape = SubResource( 9 )

[node name="Pivot" type="Spatial" parent="."]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 1.5, 0 )

[node name="Camera" type="Camera" parent="Pivot"]
cull_mask = 1048573
current = true
size = 5.0
far = 300.0
script = ExtResource( 1 )

[node name="PlayerGui" parent="Pivot/Camera" instance=ExtResource( 3 )]

[node name="GunContainer" type="Spatial" parent="Pivot/Camera"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0.619, -0.281, -0.844 )

[node name="PM9" parent="Pivot/Camera/GunContainer" instance=ExtResource( 4 )]
visible = false

[node name="KF1" parent="Pivot/Camera/GunContainer" instance=ExtResource( 6 )]
visible = false

[node name="RF7" parent="Pivot/Camera/GunContainer" instance=ExtResource( 5 )]

[node name="MeshInstance" type="MeshInstance" parent="."]
transform = Transform( 1, 0, 0, 0, -1.62921e-07, -1, 0, 1, -1.62921e-07, 0, 0, 0 )
visible = false
cast_shadow = 0
mesh = SubResource( 8 )
material/0 = null

[node name="HeadLimitRayCast" type="RayCast" parent="."]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 2.5, 0 )
enabled = true
cast_to = Vector3( 0, 0, 0 )

[connection signal="health_changed" from="IHealth" to="." method="_on_IHealth_health_changed"]
[connection signal="body_entered" from="Area" to="." method="_on_Area_body_entered"]
